melhorias na documentação

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,7 @@ Pypi = "https://pypi.org/project/fgts-pdf-dados/"
 
 [tool.setuptools.package-dir]
 fgts_pdf_dados = "src"
+
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
